<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/product"
        android:id="@+id/product_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/price_per_unit"
        android:layout_toRightOf="@id/product_name"
        android:id="@+id/product_price" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/discount_applied"
        android:layout_alignParentEnd="true"
        android:id="@+id/product_discount" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/product_name"
        android:id="@+id/buttons_layout">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.50"
            android:text="@string/order_one"
            android:id="@+id/order_one_button" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.50"
            android:text="@string/order_ten"
            android:id="@+id/order_ten_button" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:layout_below="@id/buttons_layout"
        android:id="@+id/line_2" />

</RelativeLayout>