<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/shop"
        android:id="@+id/shop_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/balance"
        android:layout_alignParentEnd="true"
        android:id="@+id/shop_balance_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/shop_balance_title"
        android:layout_alignParentEnd="true"
        android:id="@+id/shop_balance" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:layout_below="@id/shop_balance"
        android:id="@+id/line_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_catalogue_tap_to_hide_show"
        android:layout_margin="10dp"
        android:layout_below="@id/line_1"
        android:clickable="true"
        android:onClick="toggle_contents"
        android:id="@+id/expandable" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/expandable"
        android:id="@+id/catalogue_layout" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/product"
            android:id="@+id/product" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/price_per_unit"
            android:layout_toRightOf="@id/product"
            android:id="@+id/quantity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/discount_applied"
            android:layout_alignParentEnd="true"
            android:id="@+id/product_discount" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/product"
            android:id="@+id/catalogue_listview" />

    </RelativeLayout>

</RelativeLayout>